--- a/speakers/c6_sampson.html
+++ b/speakers/c6_sampson.html
@@ -58,7 +58,7 @@
 		</aside>
 	</main>
 	<footer>
-		<p>&copy; 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
+		<p>&copy; Yaneli Cestona, 2024 | Due 03/26/202</p>
 	</footer>
 </body>
 </html>
